@@ -1,0 +1,68 @@
+#
+# Copyright (C) 2004 by egnite Software GmbH. All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions
+# are met:
+#
+# 1. Redistributions of source code must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+# 2. Redistributions in binary form must reproduce the above copyright
+#    notice, this list of conditions and the following disclaimer in the
+#    documentation and/or other materials provided with the distribution.
+# 3. All advertising materials mentioning features or use of this
+#    software must display the following acknowledgement:
+#
+#    This product includes software developed by egnite Software GmbH
+#    and its contributors.
+#
+# THIS SOFTWARE IS PROVIDED BY EGNITE SOFTWARE GMBH AND CONTRIBUTORS
+# ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
+# FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL EGNITE
+# SOFTWARE GMBH OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+# BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
+# OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
+# AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
+# THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+# SUCH DAMAGE.
+#
+# For additional information see http://www.ethernut.de/
+#
+# $Log: Makefile,v $
+# Revision 1.1  2004/09/19 12:37:42  haraldkipp
+# ARM7 initialization added
+#
+#
+
+PROJ = libnutarch
+
+top_srcdir = ..
+top_blddir = ..
+
+VPATH = $(top_srcdir)/arch
+
+SRCS =
+ifeq ($(ARCH), arm)
+OBJ1 = arm/init/crt$(LDNAME).o
+endif
+
+OBJS = $(SRCS:.c=.o)
+include $(top_blddir)/UserConf.mk
+
+include $(top_srcdir)/Makedefs
+
+all: $(PROJ).a $(OBJS) $(OBJ1)
+
+install: $(PROJ).a $(OBJ1)
+	$(CP) $(PROJ).a $(LIBDIR)/$(PROJ).a
+	$(CP) $(OBJ1) $(LIBDIR)/$(notdir $(OBJ1))
+
+include $(top_srcdir)/Makerules
+
+.PHONY: clean
+clean: cleancc cleanedit
+	-rm -f $(PROJ).a
+	-rm -f $(OBJ1)
