@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.121 2004/09/19 12:31:47 haraldkipp Exp $
+$Id: ChangeLog,v 1.122 2004/09/19 12:37:42 haraldkipp Exp $
 
 2004-09-19  Harald Kipp  <harald.kipp@egnite.de>
 
@@ -11,6 +11,10 @@ $Id: ChangeLog,v 1.121 2004/09/19 12:31:47 haraldkipp Exp $
 	* include/cfg/arch.h, include/cfg/crt.h, include/cfg/eeprom.h,
 	include/cfg/os.h, include/cfg/syslog.h: Configuration 
 	placeholders for building in source tree.
+
+	* arch/arm/init/crteb40a_ram.S, arch/arm/ldscripts/eb40a_ram.ld,
+	arch/arm/ldscripts/s3c4510b_ram.ld, arch/Makefile:
+	ARM7 initialization.
 
 
 2004-09-17  Ole Reinhardt <ole.reinhardt@kernelconcepts.de>
